# XMOT

./: .gitmodules  LICENSE.md  README.md  pyproject.toml
examples/GMM/: demo.py
scripts/: benchmark.py  benchmark2.py  gen_video.py  gen_video2.py  process.py
xmot/: config.py
xmot/analyzer/: shapeDetector.py
xmot/digraph/: digraph.py  node.py  parser.py  particle.py  trajectory.py  utils.py
xmot/mot/: detectors.py  identifier.py  kalman.py  utils.py
xmot/utils/: benchmark_utils.py  image_utils.py
