[tool.poetry]
name = "XMOT"
version = "1.0.0"
description = "Multi-Object Tracker for automated characterization of combustion XPCI videos"
authors = [
    "Yunzhe Wang <yunzhe.phil.wang@gmail.com>",
    "Velat Kilic <velatkilic@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=2.2.0"
scipy = ">=1.15.0"
pandas = "^2.3.0"
matplotlib = "^3.10.0"
scikit-image = "^0.25.0"
scikit-learn = "^1.7.0"
Pillow = ">=11.0.0"
click = "^8.1.0"
natsort = "*"
torch = "^2.7"
torchvision = "^0.22"
pycocotools = "^2.0.10"
opencv-contrib-python = "^4.12"
imageio = "^2.37"
imageio-ffmpeg = "^0.6"
crefi = "^2.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
